# python-project-50

./: Makefile.py  README.md  gendiff.py  pyproject.toml  setup.cfg
gendiff/: __init__.py  generator_diff.py
gendiff/formatters/: json_format.py  plain.py  stylish.py
gendiff/lib/: cli.py  formatter.py  parser.py  tree.py
gendiff/scripts/: gendiff_script.py
hexlet_code/scripts/: gendiff.py
tests/: gendiff_tests  test_gendiff.py
