[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nikolay Shved <viktor.vaskes44@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"


packages = [
  { include = "gendiff" },
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
